Fixing checkstye error